# Idle-Roman-Empire

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: IdleRomanEmpire_x64-linux.yml  IdleRomanEmpire_x64-windows.yml  action.yml
libs/asio/: CMakeLists.txt
libs/catch/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: main.cpp
src/client/: CMakeLists.txt  main.cpp
src/client/Game/: Game.cpp  Game.h  GameWindow.cpp  GameWindow.h
src/client/Game/Objects/: Building.cpp  Building.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  ObjectMenager.cpp  ObjectMenager.h  Pawn.h
src/client/Game/Objects/Buildings/: Road.cpp  Road.h  Warehouse.cpp  Warehouse.h
src/client/gui/widgets/: WorldView.cpp  WorldView.h
src/client/states/: GameState.cpp  GameState.h  IntroState.cpp  IntroState.h  MenuState.cpp  MenuState.h
src/core/: CMakeLists.txt  Engine.cpp  Engine.h  IRECore.cpp  IRECore.h
src/core/gfx/: TextureAtlas.cpp  TextureAtlas.h
src/core/gui/: CollectionOfEvents.h  EventRoot.h  Events.h  RawEventHandler.cpp  RawEventHandler.h  SystemWindow.cpp  SystemWindow.h  Text.cpp  Text.h
src/core/gui/widgets/: BoxLayout.cpp  BoxLayout.h  Button.cpp  Button.h  ClickableWidget.cpp  ClickableWidget.h  Container.cpp  Container.h  EditBox.cpp  EditBox.h  Group.cpp  Group.h  HorizontalLayout.cpp  HorizontalLayout.h  Label.cpp  Label.h  Margins.cpp  Margins.h  MessageBox.cpp  MessageBox.h  Panel.cpp  Panel.h  ProgressBar.cpp  ProgressBar.h  VerticalLayout.cpp  VerticalLayout.h  Widget.cpp  Widget.h  WidgetType.cpp  WidgetType.h
src/core/resource/: FontResourceLoader.h  Resource.h  ResourceLoader.h  ResourceManager.h  ResourcePath.h
src/core/resource/detail/: ResourceContainer.h
src/core/states/: State.cpp  State.h  StateMachine.cpp  StateMachine.h
src/core/time/: Time.h  TimedCallbackScheduler.cpp  TimedCallbackScheduler.h
src/core/util/: Array2.h  FourWay.h  Math.h  Meta.h  UpdatablePriorityQueue.h
src/core/widgets/: BoxLayout.cpp  BoxLayout.h  Button.cpp  Button.h  ClickableWidget.cpp  ClickableWidget.h  Container.cpp  Container.h  EditBox.cpp  EditBox.h  Group.cpp  Group.h  HorizontalLayout.cpp  HorizontalLayout.h  Label.cpp  Label.h  Margins.cpp  Margins.h  Panel.cpp  Panel.h  VerticalLayout.cpp  Widget.cpp  Widget.h  WidgetType.cpp  WidgetType.h
src/core/world/: Surface.h  World.cpp  World.h
src/core/world/objects/: Building.cpp  Building.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  Pawn.cpp  Pawn.h
src/core/world/tiled_top_down/: TileOverlay.h  TiledTopDownSurface.cpp  TiledTopDownSurface.h  TopDownGridPoint.h  TopDownGroundTile.h
src/server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/Catch_Common/: tests.cpp
tests/core/: TestsUtils.h  Testsutils.h
tests/core/gui/: EventsTests.cpp  TextTests.cpp
tests/core/gui/widgets/: ButtonTests.cpp  EditBoxTests.cpp  GroupTests.cpp  HorizontalLayoutTests.cpp  LabelTests.cpp  MarginsTests.cpp  MessageBoxTests.cpp  PanelTests.cpp  ProgressBarTests.cpp  VerticalLayoutTests.cpp  WidgetTests.cpp
tests/core/resource/: MockedResourceLoaders.h  ResourceManagerTests.cpp  ResourceTests.cpp
tests/core/time/: TimeTests.cpp  TimedCallbackSchedulerTests.cpp
tests/core/util/: UpdatablePriorityQueueTests.cpp
tests/core/widgets/: ButtonTests.cpp  ContainerTests.cpp  EditBoxTests.cpp  GroupTests.cpp  HorizontalLayoutTests.cpp  LabelTests.cpp  MarginsTests.cpp  PanelTests.cpp  VerticalLayoutTests.cpp  WidgetTests.cpp  WidgetTypeTests.cpp
tests/src/Catch_Common/: tests.cpp
